--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "teste": "mocha --timeout 2000 --exit",
-    "dev": "NODE_ENV=development nodemon server.js",
+    "dev": "NODE_ENV=development node server.js",
     "build": "NODE_ENV=production start server.js --name=\"ecommerce-api\""
   },
   "author": "Nadson Cardoso",
