--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "compression": "^1.7.3",
     "cors": "^2.8.5",
     "crypto": "^1.0.1",
+    "dotenv": "^10.0.0",
     "ejs": "^2.6.1",
     "express": "^4.16.4",
     "express-jwt": "^5.3.1",
