Configuracoes para heroku

--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "server.js",
   "scripts": {
     "teste": "mocha --timeout 2000 --exit",
-    "dev": "NODE_ENV=development node server.js --name=\"ecommerce-api\"",
-    "build": "NODE_ENV=production node server.js --name=\"ecommerce-api\""
+    "dev": "NODE_ENV=development node server.js",
+    "start": "NODE_ENV=production node server.js"
   },
   "author": "Nadson Cardoso",
   "license": "ISC",
