--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "express-jwt": "^5.3.1",
     "express-validation": "^1.0.2",
     "faker": "^4.1.0",
+    "formidable": "^2.0.1",
+    "fs": "0.0.1-security",
+    "imagekit": "^3.2.2",
     "joi": "^14.3.1",
     "joi-date-extensions": "^1.2.0",
     "jsonwebtoken": "^8.4.0",
