--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "teste": "mocha --timeout 2000 --exit",
-    "dev": "NODE_ENV=development nodemon node server.js",
+    "dev": "NODE_ENV=development nodemon server.js",
     "start": "NODE_ENV=production node server.js"
   },
   "author": "Nadson Cardoso",
@@ -35,13 +35,12 @@
     "multer": "^1.4.1",
     "node-correios": "^2.2.0",
     "node-pagseguro": "^0.1.9",
-    "nodemailer": "^4.7.0",
-    "nodemon": "^1.18.9",
+    "nodemailer": "^6.7.0",
     "request": "^2.88.0",
     "xml2js": "^0.4.19",
     "xml2json": "^0.11.2"
   },
   "devDependencies": {
-    "nodemon": "^2.0.7"
+    "nodemon": "^2.0.14"
   }
 }
