--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "node-pagseguro": "^0.1.9",
     "nodemailer": "^6.7.0",
     "request": "^2.88.0",
+    "twilio": "^3.71.1",
     "xml2js": "^0.4.19",
     "xml2json": "^0.11.2"
   },
